# ActCHAMP

./: README.md
actCHAMP/: CMakeLists.txt  package.xml
act_champ/articulation_msgs/: package.xml
act_champ/experiments/: CMakeLists.txt
act_champ/experiments/data/bagfiles/drawer_data/: d_run_101.bag  drawer_run1.bag  drawer_run4.bag
act_champ/experiments/data/bagfiles/drawer_no_marker/: run_002.bag
act_champ/experiments/data/bagfiles/microwave_data_no_marker/: run_001.bag  run_no_grip_001.bag
act_champ/experiments/data/bagfiles/old_data/: drawer_close_2.bag  drawer_open_1.bag  drawer_open_2.bag  microwave_run5.bag  microwave_run8.bag  table_assembly_run1_insert.bag  table_assembly_run1_unscrew.bag  table_assembly_run2_unscrew.bag  table_assembly_run3_insert.bag  table_assembly_run3_unscrew.bag
act_champ/experiments/data/bagfiles/processed/: drawer_openClose_3.bag
act_champ/experiments/data/bagfiles/stapler/: stapler_1.bag  stapler_101.bag  stapler_109.bag  stapler_202.bag
act_champ/experiments/data/bagfiles/stapler_no_marker/: run_003.bag  run_004.bag  run_005.bag
act_champ/experiments/data/cp_data/: drawer_openClose_3_champ.txt  microwave_run6_action.txt  microwave_run6_champ.txt  microwave_with_action.txt  static_data_champ.txt
act_champ/experiments/data/cp_data/drawer_data/: drawer_run3_action_1.txt  drawer_run3_action_2.txt  drawer_run3_champ.txt  drawer_run3_new_filtered_action_2_1.txt  drawer_run3_new_filtered_champ_2.txt  drawer_run3_small_2_action.txt  (+4 more)
act_champ/experiments/data/pkl_files/: D.pkl  drawer_openClose_3.pkl  microwave_run7.pkl  microwave_run8.pkl  static_data.pkl
act_champ/experiments/launch/: data_topics.launch
act_champ/experiments/src/: keyboard_eef_controller.py  kinova_shadowing.py
active_champ/: CMakeLists.txt  package.xml
arm_utils/: CMakeLists.txt  package.xml  setup.py
arm_utils/launch/: keyboard_teleop.launch
arm_utils/src/: shadow_arm.cpp
articulation_msgs/: CMakeLists.txt
articulation_msgs/msg/: ArticulatedObjectMsg.msg  ModelMsg.msg  TrackMsg.msg
articulation_msgs/srv/: GetModelPriorSrv.srv
changepoint/: CMakeLists.txt  default_cp_plugin.xml  package.xml  setup.py
changepoint/include/changepoint/: articulation.h  cp_detector.h  gauss1D.h  visualization_utils.h
changepoint/include/changepoint/articulation_models/: generic_model.h  helical_model.h
changepoint/launch/: articModel_tester.launch
changepoint/nodes/: changepoint_server.cpp
changepoint/scripts/: articTest_action.py  articTest_champ.py  cleaned_rosbag_generator.py
changepoint/scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
changepoint/src/: articulation.cpp  cp_detector.cpp  gauss1D.cpp  utils.cpp
changepoint/src/models/: factory.cpp  generic_model.cpp  helical_model.cpp  planar_model.cpp  rigid_model.cpp  rotational_model.cpp
changepoint/test/: articTest.py  demo_quality_analysis.cpp  test_articulation_models.cpp  test_cp_visual.cpp
changepoint/test/data/loglikelihoods/: [A[A[A[A[A[A[A[AA[B[B[A[B[A[A[A[A.csv  -0.007333.csv  -0.042205.csv  -0.999652.csv  .csv  0.025356.csv  0.367889.csv  0.csv  94.csv  champ.csv  drawer_3_action.csv  drawer_3_action_1.csv  drawer_3_action_2.csv  drawer_3_champ.csv  drawer_3_small2_action_1.csv  drawer_3_small2_action_2.csv  drawer_3_small2_action_3.csv  drawer_3_small2_action_4.csv  drawer_3_small2_action_5.csv  drawer_3_small2_champ_1.csv  drawer_3_small2_champ_2.csv  drawer_3_small2_champ_3.csv  drawer_3_small2_champ_4.csv  drawer_3_small2_champ_5.csv  drawer_3_small3_action_1.csv  drawer_3_small3_action_2.csv  drawer_3_small3_action_3.csv  drawer_3_small3_action_4.csv  drawer_3_small3_action_5.csv  drawer_3_small3_champ_1.csv  drawer_3_small3_champ_2.csv  drawer_3_small3_champ_3.csv  drawer_3_small3_champ_4.csv  drawer_3_small3_champ_5.csv  drawer_3_small4_action_1.csv  drawer_3_small4_action_2.csv  drawer_3_small4_action_3.csv  drawer_3_small4_action_4.csv  drawer_3_small4_action_5.csv  drawer_3_small4_action_6.csv  (+51 more)
changepoint_detection/: CMakeLists.txt  package.xml
changepoint_detection/include/changepoint_detection/: articulation.h  cp_detector.h  gauss1D.h  visualization_utils.h
changepoint_detection/include/changepoint_detection/articulation_models/: planar_model.h  utils.h
changepoint_detection/launch/: articModel_tester.launch
changepoint_detection/msg/: CPParams.msg  DataPoint.msg  ModelSegment.msg
changepoint_detection/nodes/: changepoint_server.cpp
changepoint_detection/scripts/: actChamp_main.py  champ_main.py  cleaned_rosbag_generator.py
changepoint_detection/scripts/changepoint_detection/: actChamp_main.py
changepoint_detection/src/: articulation.cpp  cp_detector.cpp  gauss1D.cpp  utils.cpp
changepoint_detection/src/models/: factory.cpp  generic_model.cpp  planar_model.cpp  rigid_model.cpp  rotational_model.cpp
changepoint_detection/srv/: DetectChangepoints.srv
changepoint_detection/test/: articTest.py  gaussTest.py  test_articulation_models.cpp  test_cp_visual.cpp
pomdp_hd/: CMakeLists.txt  package.xml  setup.py
pomdp_hd/scripts/: Stapler traj plot.ipynb  Test_planner.ipynb  drawer.py  planner_interface.py  planner_interface_2.py  pomdp_hd_planner.py  stapler.py  test_drawer.py  test_microwave.py  test_stapler.py  test_stapler_planner.py
pomdp_hd/scripts/.ipynb_checkpoints/: Stapler traj plot-checkpoint.ipynb
pomdp_hd/src/pomdp_hd/: __init__.py
pomdp_hd/src/pomdp_hd/cython/: __init__.py  beliefEvolution.cpp  beliefEvolution.pyx  setup.py
pomdp_hd/src/pomdp_hd/include/: belief_evolution.h  dynamics.h  filter.h  problem_definition.h  utils.h
pomdp_hd/src/pomdp_hd/src/: __init__.py  belief_evolution.cpp  belief_rrt.py  blqr.py  feedback_publisher.cpp  lqr_rrt_star.py  rrt_tree_1.pbz2  rrt_tree_save_1.pbz2  simulator.cpp  trajOpt.py
pomdp_hd/src/pomdp_hd/tests/: filter_test.cpp  kp_test.cpp  pomdp_dummy.py  stapler_test.cpp  test_stapler_beliefEvolution.py
pomdp_hd/traj_data/: drawer_run6_delta_neg_15.pkl  drawer_run_3_delta_16.pkl  drawer_smooth_close.pkl  run_2_delta_11.pkl  stapler_run_385.pkl  stapler_run_584.pkl
(+333 files in other folders)
