<?xml version="1.0"?>
<package format="2">
  <name>actChamp</name>
  <version>0.0.0</version>
  <description>Metapackage for actChamp package</description>
  <maintainer email="ajinkya@todo.todo">jainajinkya92@gmail.com</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
     <metapackage/>
  </export>
</package>
