<?xml version="1.0"?>
<package format="2">
  <name>active_champ</name>
  <version>0.0.0</version>
  <description>Metapackage for active_champ package</description>
  <maintainer email="ajinkya@todo.todo">ajinkya</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
     <metapackage/>
  </export>
</package>
