<?xml version="1.0"?>
<package>
  <name>articulation_msgs</name>
  <version>0.0.0</version>
  <description >
  This package defines generic messages for communicating observed kinematic trajectories and articulation models. Further, this packages defines generic services for fitting, selecting and storing kinematic models from observed trajectories.
  </description>
  <author>Juergen Sturm</author>
  <maintainer email="jainajinkya@gmail.com">Ajinkya Jain</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/articulation_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>  

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>  
  <run_depend>sensor_msgs</run_depend>  
  <run_depend>visualization_msgs</run_depend> 
  <run_depend>message_runtime</run_depend>

</package>